--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -19,8 +19,9 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@auth0/angular-jwt": "^2.1.0",
-    "alertifyjs": "^1.11.2",
+    "@auth0/angular-jwt": "^2.1.2",
+    "alertify": "^0.3.0",
+    "alertifyjs": "^1.11.4",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.1.1",
     "core-js": "^2.5.4",
@@ -30,6 +31,7 @@
     "ngx-bootstrap": "^4.2.0",
     "ngx-gallery": "^5.3.2",
     "ngx-spinner": "^7.1.4",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "time-ago-pipe": "^1.3.2",
     "tslib": "^1.9.0",
