--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -5,7 +5,7 @@
   "ConnectionStrings":{
 
 "DefaultConnection" :"Server=localhost;Database=datingApp; Uid=AppUser; Pwd=Jokoyoski200@",
-"DevConnection":"Data Source=sql7002.site4now.net;Initial Catalog=DB_A4A118_Jokoyoski200;User Id=DB_A4A118_Jokoyoski200_admin;Password=Jokoyoski200@;"
+"DevConnection":"Data Source=DESKTOP-A9C8DQT;Initial Catalog=datingapp;User Id=sa;Password=automata01;"
   },
   "Logging": {
     "LogLevel": {
